[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anonypyx"
version = "0.2.0"
description = "Anonymization library for python, fork of anonypy"
readme = "README.md"
authors = [
    { name = "abyssexplorer", email = "abyssexplorer2@gmail.com"},
    { name = "glassonion1", email = "glassonion999@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta", 
    "Intended Audience :: Science/Research",
]
keywords = ["k-anonymity", "l-diversity", "t-closeness", "anonymization", "mondrian", "microaggregation", "mdav"]
dependencies = [
    "pandas>=1.1.0",
    "numpy>=1.21.3",
    "scikit-learn>=1.0.1",
    "scipy>=1.11.3",
    "category_encoders>=2.3.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
# TODO
Homepage = "https://github.com/abyssexplorer/anonypyx"

[tool.setuptools]
packages = ["anonypyx"]
